--- a/src/imgui/imgui.ini
+++ b/src/imgui/imgui.ini
@@ -3,8 +3,8 @@ Pos=60,60
 Size=400,400
 Collapsed=0
 
-[Window][Hello, world!]
-Pos=181,146
-Size=205,54
+[Window][Mockup]
+Pos=0,0
+Size=640,480
 Collapsed=0
 
