qt: first draft, very rudimental gui

--- a/src/qt/CMakeLists.txt
+++ b/src/qt/CMakeLists.txt
@@ -1,10 +1,9 @@
-find_package(Qt5Widgets REQUIRED)
+find_package(Qt6Widgets REQUIRED)
 set(CMAKE_AUTOMOC ON)
-add_executable(helloQt qtMain.cpp HelloQt.cpp)
+add_executable(CashOverflow qtMain.cpp TabDialog.cpp AccountsTab.cpp)
 # set_target_properties( helloQt PROPERTIES CMAKE_AUTOMOC ON )
-target_link_libraries(
-  helloQt
+target_link_libraries(CashOverflow
   project_warnings
   project_options
-  Qt5::Widgets)
-target_compile_features(helloQt PUBLIC cxx_nullptr cxx_lambdas)
+  Qt6::Widgets)
+target_compile_features(CashOverflow PUBLIC cxx_nullptr cxx_lambdas)
