--- a/src/imgui/CMakeLists.txt
+++ b/src/imgui/CMakeLists.txt
@@ -4,4 +4,7 @@ add_executable(test_imgui test.cpp)
 find_package(ImGui-SFML REQUIRED)
 find_package(tl-expected REQUIRED)
 include_directories(${tl_INCLUDE_DIRS})
-target_link_libraries(test_imgui PRIVATE project_warnings project_options ImGui-SFML::ImGui-SFML)
+find_package(fmt REQUIRED)
+include_directories(${fmt_INCLUDE_DIRS})
+
+target_link_libraries(test_imgui PRIVATE project_warnings project_options ImGui-SFML::ImGui-SFML fmt::fmt)
