--- a/src/imgui/CMakeLists.txt
+++ b/src/imgui/CMakeLists.txt
@@ -1,5 +1,6 @@
 # imgui test executable, with full warnings enabled
-add_executable(test_imgui test.cpp)
-
+add_executable(test_imgui test.cpp logger.hpp)
 find_package(ImGui-SFML REQUIRED)
-target_link_libraries(test_imgui PRIVATE project_warnings project_options ImGui-SFML::ImGui-SFML)
+find_package(fmt REQUIRED)
+include_directories(${fmt_INCLUDE_DIRS})
+target_link_libraries(test_imgui PRIVATE project_warnings project_options ImGui-SFML::ImGui-SFML fmt::fmt)
