--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -21,6 +21,7 @@ add_executable(
     hello_test
     hello_test.cpp
     table_builder_tests.cpp
+    map_tests.cpp
 )
 target_link_libraries(
     hello_test
