o jorge disse que funciona

--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -55,6 +55,7 @@ jobs:
           echo "Ubuntu - Fix Conan Path"
           sudo update-alternatives --install /usr/bin/conan conan /home/runner/.local/bin/conan 10
           sudo update-alternatives --config conan
+          sudo apt install libudev-dev
         fi;
 
     - name: Configure CMake
