very simple way to iterate enum

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -19,6 +19,7 @@ enable_testing()
 
 add_executable(
     hello_test
+    category_tests.cpp
     hello_test.cpp
     table_builder_tests.cpp
     map_tests.cpp
