--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -58,6 +58,7 @@ jobs:
           sudo apt install libudev-dev
           sudo apt install libgl1-mesa-dev
           sudo apt install libx11-xcb-dev
+          sudo apt install libfontenc-dev
         fi;
 
     - name: Configure CMake
