--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -59,6 +59,7 @@ jobs:
           sudo apt install libgl1-mesa-dev
           sudo apt install libx11-xcb-dev
           sudo apt install libfontenc-dev
+          sudo apt install libxaw7-dev
         fi;
 
     - name: Configure CMake
