--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -60,6 +60,7 @@ jobs:
           sudo apt install libx11-xcb-dev
           sudo apt install libfontenc-dev
           sudo apt install libxaw7-dev
+          sudo apt install libxcomposite-dev
         fi;
 
     - name: Configure CMake
