--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -61,6 +61,7 @@ jobs:
           sudo apt install libfontenc-dev
           sudo apt install libxaw7-dev
           sudo apt install libxcomposite-dev
+          sudo apt install libxcursor-dev
         fi;
 
     - name: Configure CMake
