--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -62,6 +62,7 @@ jobs:
           sudo apt install libxaw7-dev
           sudo apt install libxcomposite-dev
           sudo apt install libxcursor-dev
+          sudo apt install libxdamage-dev
         fi;
 
     - name: Configure CMake
