--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -63,6 +63,7 @@ jobs:
           sudo apt install libxcomposite-dev
           sudo apt install libxcursor-dev
           sudo apt install libxdamage-dev
+          sudo apt install libxi-dev
         fi;
 
     - name: Configure CMake
