--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -64,6 +64,7 @@ jobs:
           sudo apt install libxcursor-dev
           sudo apt install libxdamage-dev
           sudo apt install libxi-dev
+          sudo apt install libxinerama-dev
         fi;
 
     - name: Configure CMake
