--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -65,6 +65,7 @@ jobs:
           sudo apt install libxdamage-dev
           sudo apt install libxi-dev
           sudo apt install libxinerama-dev
+          sudo apt install libxmuu-dev
         fi;
 
     - name: Configure CMake
