--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -66,6 +66,7 @@ jobs:
           sudo apt install libxi-dev
           sudo apt install libxinerama-dev
           sudo apt install libxmuu-dev
+          sudo apt install libxrandr-dev
         fi;
 
     - name: Configure CMake
