--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -67,6 +67,7 @@ jobs:
           sudo apt install libxinerama-dev
           sudo apt install libxmuu-dev
           sudo apt install libxrandr-dev
+          sudo apt install libxres-dev
         fi;
 
     - name: Configure CMake
