--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -68,6 +68,7 @@ jobs:
           sudo apt install libxmuu-dev
           sudo apt install libxrandr-dev
           sudo apt install libxres-dev
+          sudo apt install libxscrnsaver-dev
         fi;
 
     - name: Configure CMake
