color wrapper on main

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,11 @@
 cmake_minimum_required(VERSION 3.15)
 
+# Set default cmake compilers
+set(CMAKE_C_COMPILER "gcc.exe")
+set(CMAKE_CXX_COMPILER "g++.exe")
+#set(CMAKE_C_COMPILER "clang.exe")
+#set(CMAKE_CXX_COMPILER "clang++.exe")
+
 # Set the project name to your project name, my project isn't very descriptive
 project(cash_overflow CXX)
 include(cmake/StandardProjectSettings.cmake)
