--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -23,7 +23,7 @@ add_executable(
     hello_test.cpp
     table_builder_tests.cpp
     map_tests.cpp
-        date_tests.cpp
+        date_tests.cpp insert_query_tests.cpp
 )
 target_link_libraries(
     hello_test
