the end of that ugly map

--- a/src/imgui/CMakeLists.txt
+++ b/src/imgui/CMakeLists.txt
@@ -5,5 +5,7 @@ find_package(tl-expected REQUIRED)
 include_directories(${tl_INCLUDE_DIRS})
 find_package(fmt REQUIRED)
 include_directories(${fmt_INCLUDE_DIRS})
+find_package(range-v3 REQUIRED)
+include_directories(SYSTEM ${range-v3_INCLUDE_DIRS})
 
 target_link_libraries(test_imgui PRIVATE project_warnings project_options ImGui-SFML::ImGui-SFML fmt::fmt)
