--- a/src/imgui/CMakeLists.txt
+++ b/src/imgui/CMakeLists.txt
@@ -1,5 +1,3 @@
-# imgui test executable, with full warnings enable
-add_executable(test_imgui main.cpp logger.hpp fileHandler.hpp imguiWrapper/window.hpp logger.hpp)
 find_package(ImGui-SFML REQUIRED)
 find_package(tl-expected REQUIRED)
 include_directories(${tl_INCLUDE_DIRS})
@@ -8,4 +6,8 @@ include_directories(${fmt_INCLUDE_DIRS})
 find_package(range-v3 REQUIRED)
 include_directories(SYSTEM ${range-v3_INCLUDE_DIRS})
 
-target_link_libraries(test_imgui PRIVATE project_warnings project_options ImGui-SFML::ImGui-SFML fmt::fmt)
+add_library(money money.cpp money.hpp)
+target_link_libraries(money PRIVATE project_warnings project_options)
+
+add_executable(test_imgui main.cpp logger.hpp fileHandler.hpp imguiWrapper/window.hpp logger.hpp)
+target_link_libraries(test_imgui PRIVATE project_warnings project_options money ImGui-SFML::ImGui-SFML fmt::fmt)
